--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "emailjs-com": "^3.2.0",
     "jest": "^27.5.1",
     "react": "^18.2.0",
