--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.30.2",
+    "brew": "^0.0.8",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "gcc": "^1.0.2",
     "mongoose": "^6.6.5",
     "nodemon": "^2.0.20",
     "regex": "^0.1.1",
