--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/cypress": "^9.0.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
     "bcrypt": "^5.1.0",
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "cypress": "^12.1.0",
     "react-test-renderer": "^18.2.0"
   }
 }
