--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "brew": "^0.0.8",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "gcc": "^1.0.2",
     "mongoose": "^6.6.5",
