--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "jest": "^27.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-native-aes-crypto": "^2.1.1",
     "react-openlayers": "^0.3.0",
     "react-player": "^2.11.0",
     "react-router-dom": "^6.4.2",
